// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders a finite progress indicator 1`] = `
<svg
  className="ax-progress-finite ax-radial-progress ax-radial-progress--small"
  style={Object {}}
  viewBox="0 0 24 24"
>
  <g
    transform="translate(12, 12) rotate(-90)"
  >
    <circle
      className="ax-progress-finite__background"
      r={10}
      style={
        Object {
          "strokeWidth": 4,
        }
      }
    />
    <circle
      className="ax-progress-finite__arc"
      r={10}
      style={
        Object {
          "strokeDasharray": 62.83185307179586,
          "strokeDashoffset": 31.41592653589793,
          "strokeWidth": 4,
        }
      }
    />
  </g>
</svg>
`;

exports[`Progress renders a success indicator 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--success"
>
  <svg
    className="ax-icon ax-icon--tick"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`Progress renders an error indicator 1`] = `
<div
  className="ax-alert-icon ax-alert-icon--primary ax-alert-icon--small ax-alert-icon--error"
>
  <svg
    className="ax-icon ax-icon--warning"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    style={
      Object {
        "height": "1rem",
        "width": "1rem",
      }
    }
    viewBox="0 0 16 16"
  />
</div>
`;

exports[`Progress renders with defaultProps 1`] = `
<svg
  className="ax-progress-infinite ax-progress-infinite--subtle ax-radial-progress ax-radial-progress--small"
  style={Object {}}
  viewBox="0 0 24 24"
>
  <g
    transform="translate(12, 12) rotate(-90)"
  >
    <circle
      className="ax-progress-infinite__arc"
      r={10}
      style={
        Object {
          "stroke": "url(#ax-progress-infinite__filter--subtle)",
          "strokeDasharray": 62.83185307179586,
          "strokeDashoffset": 15.707963267948966,
          "strokeWidth": 4,
        }
      }
    />
  </g>
</svg>
`;
